--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.WebViewSample" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.WebViewSample" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
